--- a/wine_app/templates/wine_app/result.html
+++ b/wine_app/templates/wine_app/result.html
@@ -1,5 +1,14 @@
 {% extends 'wine_app/base.html' %}
 {% block content %}
-    <h1>Helloefwononw</h1>
-    <h1>{{pred}}</h1>
+    <h1>Prediction</h1>
+    <div class="progress">
+        <div class="determinate" ></div>
+    </div>
+    <h1>Quality : {{pred}}</h1>
+    
+    <script>
+        var p=(parseInt("{{pred}}")*10).toString() + "%";
+        const element = document.getElementsByClassName("determinate")
+        element[0].style.width = p;
+    </script>
 {% endblock %}
